--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,13 @@ html,body{
 .container5{
   background-color: #f7ed7e;
 }
+
+.container6{
+  background-color: black;
+  color: white;
+}
+
+
+.addressicon{
+  color: white;
+}
